welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:10: error: reassignment to val
recule(); poseBiscuit();nbBSR = nbBSR - 1;recule();}
                              ^