welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
var nbBSR = 11
for (nbBSR <- 11 to 0)
{while (!estSurBiscuit())
	{recule();}
if (estSurBiscuit())
	{prendBiscuit;}
	while (!estSurBiscuit())
		{avance();}
recule(); poseBiscuit();nbBSR = nbBSR - 1;recule();}


	